- 앱 초기화 및 주요 화면 로직 구현 - `SplashScreen` 추가 및 초기화 프로세스 설정 - `MainScreen` 구성 및 하단 네비게이션 추가 - 여행 기록, 그룹 관리, 프로필 화면 추가 - 상태 관리용 `Riverpod` 설정 - API 연동을 위한 리포지토리 및 프로바이더 구현 - 다국어 지원을 위한 `intl` 패키지 추가 - `.env`를 활용한 환경 변수 설정 및 `flutter_dotenv` 버전 업데이트 - 디자인 시스템에 맞는 색상 및 텍스트 스타일 설정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,15 @@ dependencies:
   http: ^1.2.1
 
     # 상태 관리
-  flutter_riverpod: ^2.5.1
+  flutter_riverpod: ^3.0.0
 
     # 데이터 저장
   shared_preferences: ^2.2.3
 
     # 환경 변수
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^6.0.0
+
+  intl: ^0.20.2 # 이 라인을 추가
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,6 +73,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
