--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
 
   # 네트워킹
   http: ^1.2.1
+  http_parser: ^4.0.2
+  mime: ^1.0.5
 
   # 상태 관리
   flutter_riverpod: ^2.5.1
@@ -29,6 +31,7 @@ dependencies:
   # 유틸리티
   intl: ^0.19.0
   image_picker: ^1.1.2
+  kakao_map_plugin: ^0.3.2
 
 dev_dependencies:
   flutter_test:
