--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,26 +17,30 @@ dependencies:
   # 네트워킹
   http: ^1.2.1
   http_parser: ^4.0.2
-  mime: ^1.0.5
+  mime: ^2.0.0
 
   # 상태 관리
-  flutter_riverpod: ^2.5.1
+  flutter_riverpod: ^3.0.1
 
   # 데이터 저장
   shared_preferences: ^2.2.3
 
   # 환경 변수
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^6.0.0
 
   # 유틸리티
-  intl: ^0.19.0
+  intl: ^0.20.2
   image_picker: ^1.1.2
-  kakao_map_plugin: ^0.3.2
+  kakao_map_plugin: ^0.3.7
+
+  riverpod_annotation: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
+  riverpod_generator: ^3.0.0
+  build_runner: ^2.4.10
 
 flutter:
   uses-material-design: true
