- 카카오맵 SDK 초기화 로직 개선 및 라이브러리 추가 (`services`, `clusterer`, `drawing`) - 그룹 관리 네비게이션 로직 변경: `MainScreen` 탭 전환방식 적용 - 불필요한 주석 제거 및 텍스트 수정: 오류 메시지 사용자 친화적으로 변경 - `AndroidManifest` 메타데이터 수정 및 렌더링 모드(`surface`) 추가 - `GroupRepository`에서 미사용 메서드 제거 - `build.gradle.kts` SDK 버전 명시 및 설정 검토

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
             android:usesCleartextTraffic="true"
             android:label="ar_memo_frontend"
             android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+                android:name="io.flutter.embedding.android.RenderMode"
+                android:value="surface" />
+
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
@@ -20,10 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <meta-data
-                android:name="com.kakao.sdk.AppKey"
-                android:value="14ceae9e736fe6c0751bf4a256e77587" />
 
         <meta-data
                 android:name="flutterEmbedding"
