**의존성 업데이트 및 코드 리팩토링: `flutter_riverpod`을 `riverpod`로 변경, 관련 어노테이션 및 코드 생성 적용, 새로운 의존성(`riverpod_annotation`, `riverpod_generator`, `build_runner`) 추가, 기존 프로바이더 리팩토링 및 유지 보수성 향상**

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   mime: ^1.0.5
 
   # 상태 관리
-  flutter_riverpod: ^2.5.1
+  flutter_riverpod: ^3.0.0
 
   # 데이터 저장
   shared_preferences: ^2.2.3
@@ -32,11 +32,14 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.1.2
   kakao_map_plugin: ^0.3.2
+  riverpod_annotation: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.7.1
+  riverpod_generator: ^3.0.0
 
 flutter:
   uses-material-design: true
