--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
-            android:usesCleartextTraffic="true"
             android:label="ar_memo_frontend"
-            android:icon="@mipmap/ic_launcher">
+            android:name="${applicationName}"
+            android:icon="@mipmap/ic_launcher"
+            android:usesCleartextTraffic="true">
+
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
@@ -11,6 +18,7 @@
                 android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
                 android:hardwareAccelerated="true"
                 android:windowSoftInputMode="adjustResize">
+
             <meta-data
                     android:name="io.flutter.embedding.android.NormalTheme"
                     android:resource="@style/NormalTheme"
@@ -22,11 +30,12 @@
         </activity>
 
         <meta-data
-                android:name="com.kakao.sdk.AppKey"
-                android:value="14ceae9e736fe6c0751bf4a256e77587" />
-
-        <meta-data
                 android:name="flutterEmbedding"
                 android:value="2" />
+
+        <meta-data
+                android:name="com.kakao.sdk.AppKey"
+                android:value="a04b18bad57c4a8b33e9eccada1f9748" />
+
     </application>
 </manifest>
