의존성 업데이트 및 AR 기능 구현: `ar_flutter_plugin` 추가 및 설정 최적화, AR 화면(`ARScreen`) 추가, `AndroidManifest` 권한 및 메타데이터 업데이트, 추가 플러그인(`permission_handler`, `webview_flutter`) 설정, `flutter_riverpod` 및 기타 의존성 버전 다운그레이드, 홈 화면에서 AR 카메라 연결, 프로젝트 최소 SDK 버전 24로 변경.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   mime: ^1.0.5
 
   # 상태 관리
-  flutter_riverpod: ^3.0.0
-  riverpod_annotation: ^3.0.0
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
 
   # 데이터 저장
   shared_preferences: ^2.2.3
@@ -32,17 +32,22 @@ dependencies:
   # 유틸리티
   intl: ^0.19.0
   image_picker: ^1.1.2
-  kakao_map_plugin: ^0.3.2
+  kakao_map_plugin: ^0.3.7
+  ar_flutter_plugin: ^0.7.3
+  vector_math: ^2.1.4
+  permission_handler: ^11.0.0
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  build_runner: ^2.7.1
-  riverpod_generator: ^3.0.0
+  build_runner: ^2.5.4
+  riverpod_generator: ^2.4.0
 
 flutter:
   uses-material-design: true
 
   assets:
     - .env
+    - Models/
