의존성 업데이트 및 AR 기능 개선: `ar_flutter_plugin_updated`로 교체, 관련 코드 수정 및 의존성 업데이트, 최소 JVM 타겟 버전 11로 변경, 카카오맵 초기화 로직 플랫폼 분기 적용, Android 메타데이터 `RenderMode` 추가, UI 개선 (슬라이딩 패널 크기 확장).

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.1.2
   kakao_map_plugin: ^0.3.7
-  ar_flutter_plugin: ^0.7.3
+  ar_flutter_plugin_updated: ^0.0.1
   vector_math: ^2.1.4
-  permission_handler: ^11.0.0
+  permission_handler: ^11.3.1
   webview_flutter: ^4.7.0
 
 dev_dependencies:
