--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,17 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.CAMERA" />
-
     <application
             android:label="ar_memo_frontend"
-            android:name="${applicationName}"
+            
             android:icon="@mipmap/ic_launcher"
             android:usesCleartextTraffic="true">
-
+        <meta-data
+                android:name="io.flutter.embedding.android.RenderMode"
+                android:value="surface" />
         <meta-data android:name="com.google.ar.core" android:value="required" tools:replace="android:value" />
-
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
