--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: ar_memo_frontend
 description: "A new Flutter project."
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -14,14 +13,17 @@ dependencies:
   # UI
   cupertino_icons: ^1.0.8
   flutter_speed_dial: ^7.0.0
-  ar_flutter_plugin_updated: ^1.0.0
 
-  # --- 카카오맵 SDK 변경 ---
-  # kakao_map_plugin: ^1.1.1 # <- 삭제 또는 주석 처리
-  kakao_flutter_sdk_map: ^1.10.0 # <- 공식 SDK 추가 (최신 안정 버전 확인)
-  # -----------------------
+  # AR (공식 패키지 사용, 가용 최신: 0.7.3)
+  ar_flutter_plugin: ^0.7.3
 
-  # 네트워킹
+  # Kakao 지도
+  kakao_map_sdk: ^1.2.1
+
+  # Kakao 공통 SDK (KakaoSdk.init 사용 시 필요)
+  kakao_flutter_sdk_common: ^1.9.6
+
+  # 네트워킹 & 상태관리 등
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.5.1
@@ -37,11 +39,12 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   build_runner: ^2.4.11
   riverpod_generator: ^2.4.1
-  riverpod_lint: ^2.3.12
-  custom_lint: ^0.6.4
+  riverpod_lint: ^2.6.5
+  custom_lint: ^0.7.6
 
 flutter:
   uses-material-design: true
+
   assets:
     - .env
-    - Models/ # 모델 사용 시 주석 해제
+    - Models/
