--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   image_picker: ^1.1.2
   vector_math: ^2.1.4
   intl: ^0.19.0
+  http_parser: ^4.1.2
+  mime: ^1.0.0
 
 dev_dependencies:
   flutter_test:
