--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,20 +1,18 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
             android:label="ar_memo_frontend"
-            
+            android:name="${applicationName}"
             android:icon="@mipmap/ic_launcher"
-            android:usesCleartextTraffic="true">
-        <meta-data
-                android:name="io.flutter.embedding.android.RenderMode"
-                android:value="surface" />
-        <meta-data android:name="com.google.ar.core" android:value="required" tools:replace="android:value" />
+            android:usesCleartextTraffic="true"
+            android:requestLegacyExternalStorage="true">
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
@@ -23,7 +21,6 @@
                 android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
                 android:hardwareAccelerated="true"
                 android:windowSoftInputMode="adjustResize">
-
             <meta-data
                     android:name="io.flutter.embedding.android.NormalTheme"
                     android:resource="@style/NormalTheme"
@@ -31,6 +28,13 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="kakaomap" android:scheme="kakao${KAKAO_NATIVE_APP_KEY_PLACEHOLDER}"/>
             </intent-filter>
         </activity>
 
@@ -40,7 +44,9 @@
 
         <meta-data
                 android:name="com.kakao.sdk.AppKey"
-                android:value="a04b18bad57c4a8b33e9eccada1f9748" />
+                android:value="${KAKAO_NATIVE_APP_KEY_PLACEHOLDER}" />
+
+        <meta-data android:name="com.google.ar.core" android:value="required" />
 
     </application>
 </manifest>
