카카오맵 및 관련 코드 제거, `kakao_map_sdk`로 전환, `pubspec.yaml` 및 의존성 업데이트, 그룹 상세 화면 UI 리팩토링, Android/iOS 위치 권한 및 메타데이터 추가.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
         
 
         <meta-data android:name="com.google.ar.core" android:value="required" tools:replace="android:value"/>
+        <!-- <meta-data android:name="com.google.android.geo.API_KEY" android:value="YOUR_GOOGLE_MAPS_API_KEY"/> -->
+        <meta-data android:name="com.kakao.sdk.AppKey" android:value="${KAKAO_NATIVE_APP_KEY}"/>
 
     </application>
 </manifest>
