`kakao_map_plugin` 및 관련 코드 제거, `kakao_map_sdk`로 전환, 기존 맵 로직 리팩토링, 지도 위젯 및 POI 관리 기능 개선, `build.gradle.kts`에서 JVM 타겟 설정 제거.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
 
   # --- 카카오맵 SDK ---
-  kakao_map_plugin: ^0.2.2
+  kakao_map_sdk: ^1.1.4
   # -------------------------------
 
   # 네트워킹 & 상태관리 등
