Exif 의존성 추가 및 위치 활용 로직 개선: `pubspec.yaml`에 `exif` 추가, 이미지 선택 시 위치 정보 디코딩 및 설정 로직 구현, 마커 관리 및 기록 생성 화면의 위치 설정 흐름 최적화.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   # --- 카카오맵 SDK ---
   kakao_map_sdk: ^1.1.4
   # -------------------------------
+  exif: ^3.1.0
 
   # 네트워킹 & 상태관리 등
   http: ^1.2.1
