--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,12 @@ dependencies:
   vector_math: ^2.1.4
   intl: ^0.19.0
   geolocator: ^11.1.0
-  ar_flutter_plugin: ^1.0.7 # AR 기능 사용 시 필요
+  ar_flutter_plugin:
+    git:
+      url: https://github.com/CariusLars/ar_flutter_plugin.git
+      ref: dart-3-support
+      path: ar_flutter_plugin
+      ## upstream main 은 Dart 2 전용이므로 dart-3-support 브랜치 사용
 
 dev_dependencies:
   flutter_test:
