--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,7 @@ dependencies:
   vector_math: ^2.1.4
   intl: ^0.19.0
   geolocator: ^11.1.0
-  ar_flutter_plugin:
-    git:
-      url: https://github.com/CariusLars/ar_flutter_plugin.git
-      ref: dart3-support
-      ## upstream main 은 Dart 2 전용이므로 dart3-support 브랜치 사용
+  ar_flutter_plugin: ^0.7.5 # 공식 배포본 중 Dart 3 호환 버전
 
 dev_dependencies:
   flutter_test:
