--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   image_picker: ^1.1.2
   vector_math: ^2.1.4
   intl: ^0.19.0
-  geolocator: ^9.0.2
+  geolocator: ^11.1.0
+  permission_handler: ^12.0.1
   ar_flutter_plugin: ^0.7.3 # pub.dev 최신 안정 버전
 
 dev_dependencies:
@@ -39,6 +40,19 @@ dev_dependencies:
   riverpod_generator: ^2.4.1 # 이전 버전 riverpod_generator: ^2.6.5 에서 변경됨
   riverpod_lint: ^2.6.5
   custom_lint: ^0.7.6
+
+dependency_overrides:
+  geolocator: ^11.1.0
+  geolocator_android: ^5.0.2
+  geolocator_apple: ^3.0.3
+  geolocator_platform_interface: ^4.2.2
+  geolocator_web: ^4.1.3
+  geolocator_windows: ^0.2.5
+  permission_handler: ^12.0.1
+  permission_handler_android: ^13.0.1
+  permission_handler_apple: ^9.4.7
+  permission_handler_platform_interface: ^4.3.0
+  permission_handler_windows: ^0.2.1
 
 flutter:
   uses-material-design: true
