--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,36 +21,34 @@ dependencies:
 
   # 네트워킹 & 상태관리 등
   http: ^1.2.1
-  flutter_dotenv: ^5.1.0
-  flutter_riverpod: ^2.5.1
-  riverpod_annotation: ^2.3.5
+  flutter_dotenv: ^6.0.0
+  flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
   shared_preferences: ^2.2.3
   image_picker: ^1.1.2
   vector_math: ^2.1.4
-  intl: ^0.19.0
+  intl: ^0.20.2
   geolocator: ^11.1.0
   permission_handler: ^12.0.1
-  ar_flutter_plugin: ^0.7.3 # pub.dev 최신 안정 버전
+  ar_flutter_plugin: ^0.7.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
   build_runner: ^2.4.11
-  riverpod_generator: ^2.4.1 # 이전 버전 riverpod_generator: ^2.6.5 에서 변경됨
-  riverpod_lint: ^2.6.5
-  custom_lint: ^0.7.6
+  riverpod_generator: ^3.0.3 # 이전 버전 riverpod_generator: ^2.6.5 에서 변경됨
+  riverpod_lint: ^3.0.3
+  custom_lint: ^0.8.1
 
 dependency_overrides:
   geolocator: ^11.1.0
   geolocator_android: ^5.0.2
-  geolocator_apple: ^3.0.3
   geolocator_platform_interface: ^4.2.2
   geolocator_web: ^4.1.3
   geolocator_windows: ^0.2.5
   permission_handler: ^12.0.1
   permission_handler_android: ^13.0.1
-  permission_handler_apple: ^9.4.7
   permission_handler_platform_interface: ^4.3.0
   permission_handler_windows: ^0.2.1
 
