--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,11 @@ dependencies:
   intl: ^0.19.0
   geolocator: ^11.1.0
   permission_handler: ^12.0.1
-  ar_flutter_plugin: ^0.7.3 # pub.dev 최신 안정 버전
+  ar_flutter_plugin:
+    hosted:
+      name: ar_flutter_plugin
+      url: https://pub.dev
+    version: 0.7.3 # pub.dev 최신 안정 버전
 
 dev_dependencies:
   flutter_test:
