--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  riverpod_generator: ^2.5.1
   riverpod_lint: ^2.6.5
   custom_lint: ^0.7.6
+  build_runner: ^2.4.9
 
 dependency_overrides:
   geolocator: ^11.1.0
