카카오 SDK 및 Gradle 설정 업데이트: `kakao_flutter_sdk_user` 추가, Java/Kotlin 컴파일 설정을 Java 17로 변경, Gradle 설정에서 중복 제거 및 플러그인 설정 개선.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
 
   # --- 카카오맵 SDK ---
   kakao_map_sdk: ^1.1.4
+  kakao_flutter_sdk_user: ^1.9.7+3
   # -------------------------------
   native_exif: ^0.6.2
 
