--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
     <application
-            android:label="ar_memo_frontend"
+            android:label="PlaceNote"
             android:icon="@mipmap/ic_launcher"
             android:usesCleartextTraffic="true"
             android:requestLegacyExternalStorage="true">
