--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ar_memo_frontend
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: '>=3.4.3 <4.0.0' # 프로젝트 SDK 버전에 맞게 조정
@@ -20,35 +20,28 @@ dependencies:
 
   # 네트워킹 & 상태관리 등
   http: ^1.2.1
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^6.0.0
   flutter_riverpod: ^3.0.3
   riverpod_annotation: ^3.0.3
   shared_preferences: ^2.2.3
   image_picker: ^1.1.2
   vector_math: ^2.1.4
-  intl: ^0.19.0
-  geolocator: ^11.1.0
+  intl: ^0.20.2
+  geolocator: ^14.0.2
   permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  build_runner: ^2.4.11
+  flutter_lints: ^6.0.0
+  build_runner: ^2.7.1
   riverpod_generator: ^3.0.3 # 이전 버전 riverpod_generator: ^2.6.5 에서 변경됨
   riverpod_lint: ^3.0.3
   custom_lint: ^0.8.0
 
-dependency_overrides:
-  geolocator: ^11.1.0
-  geolocator_android: ^5.0.2
-  geolocator_platform_interface: ^4.2.2
-  geolocator_web: ^4.1.3
-  geolocator_windows: ^0.2.5
-  permission_handler: ^12.0.1
-  permission_handler_android: ^13.0.1
-  permission_handler_platform_interface: ^4.3.0
-  permission_handler_windows: ^0.2.1
+# 🟢 [수정]
+# dependency_overrides: 섹션 전체가 삭제되었습니다.
+# (geolocator와 permission_handler 관련 내용을 모두 제거)
 
 flutter:
   uses-material-design: true
