--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -62,6 +62,6 @@
 
         <meta-data
                 android:name="com.kakao.sdk.AppKey"
-                android:value="${KAKAO_NATIVE_APP_KEY}" />
+                android:value="${KAKAO_MAP_NATIVE_APP_KEY}" />
     </application>
 </manifest>
